concord_examples/tests/ui/rate_limit_bucket_cost_non_integer.stderr
error: expected integer literal
  --> tests/ui/rate_limit_bucket_cost_non_integer.rs:14:22
   |
14 |                 cost true // ERROR: expected integer literal
   |                      ^^^^
